infra/frontro/blazn-test/networkpolicy-api-dev-sandbox-access-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-dev-sandbox-access-egress
  namespace: blazn-test
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: blazn-poc-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: blazn-sandbox-controller
  podSelector:
    matchLabels:
      app: blazn-api-dev
  policyTypes:
  - Egress
